--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -241,7 +241,7 @@
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                 <li><a href="#" th:href="@{/otherreports/reporte/pensionadoreporte}">Reporte de Personal Pensionado</a></li>
                                 <li><a href="#" th:href="@{/otherreports/exoneradoreporte/}">Reporte de Personal Exonerado <br>de Marcacion</a></li>
-                                <li><a href="#" th:href="@{/otherreports/misionesinternasreport/}">Reporte de Personal Exonerado <br>de Marcacion</a></li>
+                                <!--<li><a href="#" th:href="@{/otherreports/misionesinternasreport/}">Reporte de Personal Exonerado <br>de Marcacion</a></li>-->
                                 <li><a href="#" th:href="@{/beneficios/report/}">Reporte de Beneficios</a></li>
                                 <li><a href="#" th:href="@{/otherreports/plazasocupadas/}">Reporte Plazas Ocupadas</a></li>
                                 <li><a href="#" th:href="@{/otherreports/indemnizados/}">Reporte de Personal Indemnizado</a></li>
@@ -262,7 +262,7 @@
                                     <li><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
                                     <li><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/otherreports/cumpleanieros/}">Reporte de cumpleañeros</a></li>
-                                    <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
+                                    <!--<li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>-->
                                     <li><a href="#" th:href="@{/otherreports/temasdiagnosticos/}">Reporte de Temas de Diagnostico</a></li>
                                     <li><a href="#" th:href="@{/otherreports/estadisticocapacitados/}">Estadistico de Personal Capacitado</a></li>
                                     <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivo</a></li>
