--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -42,7 +42,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
 
  
-                     <div class="form-group">
+<!--                     <div class="form-group">
                         <label class="col-sm-2 control-label ">Codigo empleado:</label>
                         <div class="col-sm-3">
                             <input type="text" class="form-control numeros" required="true" name="codigoempleado"/>
@@ -52,7 +52,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         
                         <span class="popuptext" id="codigoempleado">Seleccione el código empleado, debe ser los digitos del 1 al 9.!</span>
                     </div>
-                    </div>
+                    </div>-->
 
                    
                                  <div class="form-group">
