--- a/src/main/resources/templates/fragments/bitacora/bitacorashow.html
+++ b/src/main/resources/templates/fragments/bitacora/bitacorashow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>SISADMRH</title>
+    <title>Listado de Bitacora</title>
      <th:block th:include="../templates/header"></th:block>
  
 
@@ -17,7 +17,7 @@
           <div class="row text-center">
                         <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
                     </div>
-        <h3 align="center">Detalle de Bitacoras</h3>
+        <!--<h3 align="center">Detalle de Bitacoras</h3>-->
     
         <div>
             <form class="form-horizontal">
@@ -57,7 +57,7 @@
             </form>
              <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/bitacoras/}">Regresar</a></button>
+                        <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/bitacoras/}">Reg</a></button>                
 
                     </div>
                 </div>
@@ -66,4 +66,8 @@
     </div>
 
 </body>
+<script>
+        
+        Textheader('pnt_bita',document.title);
+    </script>
 </html>
