--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -6,20 +6,20 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-       <div class="contenedorizq"><label  >pnt_stdo</label>  
+<!--       <div class="contenedorizq"><label  >pnt_stdo</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
+</script></label>-->
 </div><br>
  <div class="row">
         <div class="col-md-3">
          <th:block th:include="../templates/menu"></th:block>
-         <div ><label  >pnt_cstd</label> </div>
+         <!--<div ><label  >pnt_cstd</label> </div>-->
     </div> 
         <div class="col-md-8">
-            <h3 align="center" >Crear Estado</h3>
+            <!--<h3 align="center" >Crear Estado</h3>-->
     <div>
         <form class="form-horizontal" th:object="${formestado}" th:action="@{../estado}" method="post">
 <!--            <input type="hidden" th:field="*{codigoestado}"/>
@@ -74,6 +74,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
 </body>
 <script th:inline="javascript">
+    Textheader('pnt_cstd',document.title);
     $(document).ready(function () {
     if ([[${msg}]] === 0){
     swal({
