--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH</title>
+        <title>Detalle de Inasistencia</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -14,7 +14,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-        <h3 align="center">Datos de Inasistencia</h3>
+<!--        <h3 align="center">Detalle de Inasistencia</h3>-->
         <div>
             <form class="form-horizontal">
 
@@ -81,4 +81,7 @@
         <th:block th:include="../templates/footer"></th:block>
     </div>
 </body>
+<script>
+    Textheader('pnt_gecoms',document.title);
+</script>
 </html>
