--- a/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
@@ -17,26 +17,26 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">GENERACION DE CAPCITACIONES
+            <h3 align="center">GENERACION DE REPORTE DE CAPACITACIONES
             </h3>
             <div>
                 <form class="form-horizontal" id="formreport" th:object="${capacitaciones}">
 
-                   <div class="form-group">
+<!--                   <div class="form-group">
                         <label class="col-sm-3 control-label" >Nombre Capacitacion:</label>
                         <div class="col-sm-7">
                             <select class="form-control" id="codigo" name="codigo">
                             <option value="0">-- Seleccione la Capacitacion --</option>
                             <option th:each="d:${capacitaciones}" th:value="${d.codigocapacitacion}" th:text="${d.nombrecapacitacion}"></option>
                             </select>
-                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
+                            <input type="text" class="form-control" id="codigo" name="codigo"/>
                         </div>
                          <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup6')" onmouseout ="javascript:ocultarAyuda('poppup6')">a</a></b>
                         
                         <span class="popuptext" id="poppup6">Seleccione la capacitacion para generar elreporte  desplegando la lista.!</span>
                     </div>
-                    </div>
+                    </div>-->
 <!--                     <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
@@ -106,7 +106,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             dateFormat: 'dd/mm/yy'
         });
         $('#pdf').click(function(){
-            $("#formreport").attr('action', '../capacitaciones/'+ $("#codigo").val().toString());
+            $("#formreport").attr('action', '../capacitaciones/1');
             $("form#formreport").submit();
             
         });
