--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.zoom" value="3.1384283767210097"/>
+	<property name="ireport.x" value="982"/>
+	<property name="ireport.y" value="534"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -16,17 +16,16 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT count(ca.codigocapacitacion), e.nombreempleado,p.nombrepuesto,ca.duracionhoracapacitacion,c.nombrecapacitador,ca.nombrecapacitacion,
+		<![CDATA[SELECT  e.nombreempleado,p.nombrepuesto,ca.duracionhoracapacitacion,ca.nombrecapacitacion,
 ca.departamentoresponsable,ca.fechacapacitaciondesde,ca.fechacapacitacionhasta from empleado e 
 inner join empleadopuesto ep on e.codigopuesto=ep.codigopuesto
  inner join puesto p on ep.codigopuesto=p.codigopuesto 
- inner join capacitador c on e.codigoempleado=c.codigoempleado
- INNER JOIN capacitacion ca on c.codigocapacitador=ca.codigocapacitador
-where ca.codigocapacitacion=$P{CODIGO}
-and ca.fechacapacitaciondesde>=$P{FECHAINICIO}
+ inner join empleadocapacitacion ec on e.codigoempleado=ec.codigoempleado
+ INNER JOIN capacitacion ca on ec.codigocapacitacion=ca.codigocapacitacion
+where
+ ca.fechacapacitaciondesde>=$P{FECHAINICIO}
 and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	</queryString>
-	<field name="count(ca.codigocapacitacion)" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -34,9 +33,6 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="duracionhoracapacitacion" class="java.lang.Integer">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="nombrecapacitador" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="nombrecapacitacion" class="java.lang.String">
@@ -52,7 +48,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<variable name="count(ca.codigocapacitacion)_1" class="java.lang.Long" resetType="Column" calculation="Sum">
-		<variableExpression><![CDATA[$F{count(ca.codigocapacitacion)}]]></variableExpression>
+		<variableExpression><![CDATA[]]></variableExpression>
 	</variable>
 	<group name="nombreempleado">
 		<groupExpression><![CDATA[$F{nombreempleado}]]></groupExpression>
@@ -150,12 +146,16 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				</textElement>
 				<text><![CDATA[Reporte de Capacitaciones]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="658" y="1" width="100" height="15" uuid="d7e190a3-739c-4bc0-9b17-9256ca0c369b"/>
+				<text><![CDATA[Usuario: dbadmin1]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="26" splitType="Stretch">
 			<rectangle>
-				<reportElement x="10" y="0" width="788" height="20" uuid="04f3be39-f661-4d6b-858a-c3f7c3474335"/>
+				<reportElement x="4" y="2" width="794" height="24" uuid="2e141a51-ff3c-4e16-b5e4-9d4b9b8dd33c"/>
 			</rectangle>
 			<staticText>
 				<reportElement x="12" y="0" width="100" height="20" uuid="db4def3b-df76-478d-9fab-55f1effade07"/>
@@ -200,7 +200,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<text><![CDATA[Fecha Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="719" y="0" width="100" height="20" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
+				<reportElement x="719" y="0" width="83" height="20" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
 				<textElement>
 					<font size="10" isBold="true"/>
 				</textElement>
@@ -210,6 +210,9 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	</columnHeader>
 	<detail>
 		<band height="25" splitType="Stretch">
+			<rectangle>
+				<reportElement x="4" y="0" width="794" height="25" uuid="bccc8430-1fda-4275-8d4d-aacfeb89cfe2"/>
+			</rectangle>
 			<textField>
 				<reportElement x="12" y="0" width="100" height="20" uuid="1748ebf9-0a45-4a7c-b32a-c7d5e14c7d0f"/>
 				<textElement textAlignment="Center">
@@ -223,7 +226,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="254" y="0" width="100" height="20" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
+				<reportElement x="254" y="0" width="100" height="25" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{duracionhoracapacitacion}]]></textFieldExpression>
 			</textField>
@@ -243,7 +246,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<textFieldExpression><![CDATA[$F{fechacapacitaciondesde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="714" y="-1" width="100" height="20" uuid="b7945dda-3755-41cd-88bf-c01e81148f0e"/>
+				<reportElement x="714" y="-1" width="88" height="20" uuid="b7945dda-3755-41cd-88bf-c01e81148f0e"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{fechacapacitacionhasta}]]></textFieldExpression>
 			</textField>
@@ -251,25 +254,21 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	</detail>
 	<columnFooter>
 		<band height="50" splitType="Stretch">
-			<staticText>
-				<reportElement x="12" y="24" width="100" height="20" uuid="58650a5e-b159-453b-b0ca-b86b0277c141"/>
-				<text><![CDATA[Total Registros]]></text>
-			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="683" y="24" width="100" height="20" uuid="71862321-0afd-4c0d-b156-dfd0df409d2a"/>
+				<reportElement x="683" y="14" width="100" height="20" uuid="71862321-0afd-4c0d-b156-dfd0df409d2a"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="121" y="29" width="100" height="20" uuid="6cd26395-9b9e-4ab0-9cdd-d73c128c8c94"/>
-				<textFieldExpression><![CDATA[$F{count(ca.codigocapacitacion)}]]></textFieldExpression>
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="10" y="14" width="651" height="13" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
+				<textElement>
+					<font fontName="Times New Roman" isBold="true" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
-			<line>
-				<reportElement x="-52" y="-39" width="850" height="1" uuid="83e0cd52-da42-44b8-a813-e9d293acb19f"/>
-			</line>
 			<staticText>
 				<reportElement x="370" y="19" width="197" height="20" uuid="c45531db-a3d8-4bec-b3cd-a9328f3ddf5e"/>
 				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
