--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="199"/>
-	<property name="ireport.y" value="66"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="86"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -16,13 +16,11 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select COUNT(c.codigocomite), e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite from empleado e 
- inner join empleadopuesto ep ON ep.codigoempleado=ep.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado
-WHERE c.codigocomite=$P{CODIGO}
-and c.fechadesdecomite>=$P{FECHAINICIO}
+		<![CDATA[select  e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite from empleado e 
+ inner join empleadopuesto ep ON ep.codigoempleado=e.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado
+WHERE  c.fechadesdecomite>=$P{FECHAINICIO}
 and c.fechahastacomite<=$P{FECHAFIN}]]>
 	</queryString>
-	<field name="COUNT(c.codigocomite)" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -35,10 +33,10 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 	<field name="nombrecomite" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="fechadesdecomite" class="java.sql.Date">
+	<field name="fechadesdecomite" class="java.sql.Timestamp">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="fechahastacomite" class="java.sql.Date">
+	<field name="fechahastacomite" class="java.sql.Timestamp">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<background>
@@ -135,10 +133,17 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="17" y="24" width="100" height="20" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
+				<text><![CDATA[rpt_cmte]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="54" splitType="Stretch">
+			<rectangle>
+				<reportElement x="7" y="22" width="794" height="32" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
+			</rectangle>
 			<staticText>
 				<reportElement x="14" y="34" width="100" height="20" uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba"/>
 				<textElement>
@@ -185,6 +190,9 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 	</columnHeader>
 	<detail>
 		<band height="25" splitType="Stretch">
+			<rectangle>
+				<reportElement x="7" y="0" width="794" height="25" uuid="a3bb361a-70fd-4ee2-b8ea-77c86351b080"/>
+			</rectangle>
 			<textField>
 				<reportElement x="7" y="4" width="100" height="20" uuid="f0df6217-7549-481b-a72f-724465680625"/>
 				<textElement>
@@ -234,26 +242,19 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 			<line>
 				<reportElement x="5" y="5" width="763" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
 			</line>
-			<staticText>
-				<reportElement x="16" y="13" width="100" height="20" uuid="84ba6751-389d-4fb3-aa6d-8c5913376559"/>
-				<textElement>
-					<font fontName="SansSerif"/>
-				</textElement>
-				<text><![CDATA[Total de Registros]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="131" y="13" width="100" height="20" uuid="c8f0b7bc-8fc1-4aaa-976b-37d3a33e51ac"/>
-				<textElement>
-					<font fontName="SansSerif"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{COUNT(c.codigocomite)}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="652" y="10" width="100" height="20" uuid="59caeda8-7173-45d2-8c20-86e5f6ed160f"/>
+				<reportElement x="681" y="10" width="100" height="20" uuid="59caeda8-7173-45d2-8c20-86e5f6ed160f"/>
 				<textElement>
 					<font fontName="SansSerif"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="10" y="14" width="555" height="13" backcolor="#FFFFFF" uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc"/>
+				<textElement>
+					<font fontName="Times New Roman" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
