--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2dcbe6cb-3379-4a1c-aaae-d0184a031b8a">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="137"/>
+	<property name="ireport.y" value="57"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -199,25 +199,25 @@ AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%externa']]>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="43" splitType="Stretch"/>
+		<band height="43" splitType="Stretch">
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="0" y="6" width="555" height="13" backcolor="#FFFFFF" uuid="f66ee0f5-ff18-4b2e-836e-cc84a7a9861e"/>
+				<textElement>
+					<font fontName="Times New Roman" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="647" y="6" width="100" height="13" uuid="908c630c-d5ee-4e68-a37a-8b77a84c7110"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
 			<line>
 				<reportElement x="6" y="-38" width="736" height="1" uuid="3e85c97c-2b6f-43d7-b18b-75dbd6837542"/>
 			</line>
-			<staticText>
-				<reportElement x="4" y="-34" width="100" height="20" uuid="7a2e41cb-0c61-444b-af1b-a2df24e1d96a"/>
-				<text><![CDATA[Total de Registros]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="110" y="-33" width="100" height="20" uuid="75463e68-5544-4f38-ac62-a86e04d12f9c"/>
-				<textFieldExpression><![CDATA[$F{totalRegistros}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="650" y="-26" width="100" height="20" uuid="908c630c-d5ee-4e68-a37a-8b77a84c7110"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="320" y="20" width="193" height="20" uuid="3a022eab-873b-4ca9-9319-89d4b3404f76"/>
 				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
