--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="5c97d53c-6c6d-4cd7-8205-e7d0bdf541e2">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="21"/>
+	<property name="ireport.x" value="215"/>
+	<property name="ireport.y" value="42"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -205,17 +205,16 @@ AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%externa']]>
 			<line>
 				<reportElement x="3" y="5" width="787" height="1" uuid="4eac21f9-6c50-40d6-aa5e-dbd9194fdbe2"/>
 			</line>
-			<staticText>
-				<reportElement x="8" y="8" width="100" height="20" uuid="41f059d2-17cd-4371-8aa4-270e3496c123"/>
-				<text><![CDATA[Total Registros]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="110" y="9" width="100" height="20" uuid="a2925643-0cc8-4e9e-9673-3c2497a98ee8"/>
-				<textFieldExpression><![CDATA[$F{totalRegistros}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="692" y="10" width="100" height="20" uuid="2b7deff7-ae00-4d28-9a67-7e16d918c2f6"/>
+				<reportElement x="690" y="3" width="100" height="20" uuid="2b7deff7-ae00-4d28-9a67-7e16d918c2f6"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="17" y="10" width="555" height="13" backcolor="#FFFFFF" uuid="b9f332fb-847c-412c-b60f-13b0eb194b9a"/>
+				<textElement>
+					<font fontName="Times New Roman" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
